tree-sitter-ixql/grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $.pipeline_statement,
          $.reactive_pipeline_statement,
          $.mcp_pipeline_statement,
          $.assertion_statement,
          $.binding_statement,
          $.comment,
        ),
      ),

    // =========================================================
    // Section 1: Pipeline Architecture
    // =========================================================

    pipeline_statement: ($) =>
      seq(
        optional(seq($.identifier, "<-")),
        $.pipeline_expr,
        optional($.governance_annotation),
      ),

    pipeline_expr: ($) =>
      choice($.ensemble_pipeline, $.simple_pipeline),

    simple_pipeline: ($) =>
      seq(
        $.data_source,
        repeat(seq($.arrow, $.pipeline_stage)),
      ),

    pipeline_stage: ($) =>
      choice(
        $.preprocessing_stage,
        $.model_stage,
        $.evaluation_stage,
        $.deployment_stage,
        $.governance_gate,
        $.flow_control_expr,
        $.mcp_step_expr,
        $.compound_phase,
        $.assertion_check,
      ),

    // =========================================================
    // Section 2: Data Sources
    // =========================================================

    data_source: ($) =>
      choice(
        $.file_source,
        $.database_source,
        $.api_source,
        $.streaming_source_expr,
        $.governance_state_source,
        $.git_history_source,
        $.mcp_tool_source,
        $.identifier, // named data source reference
      ),

    file_source: ($) =>
      seq(
        choice("csv", "json", "parquet"),
        "(",
        $.string_literal,
        optional(seq(",", $.format_spec)),
        ")",
      ),

    streaming_source_expr: ($) =>
      choice(
        seq("websocket", "(", $.string_literal, optional(seq(",", $.string_literal)), ")"),
        seq("watch", "(", $.path_pattern, ")", optional($.debounce_expr)),
        seq("sse", "(", $.string_literal, ")"),
        seq("webhook", "(", $.provider, ",", $.string_literal, ")"),
        seq("cron", "(", $.string_literal, ")"),
        // prec.right: on `stdin csv` the generator cannot decide with one token
        // of lookahead whether to reduce `stdin` and treat `csv` as the start of
        // a new source, or shift `csv` into format_spec.
        //
        // Shifting is the only legal reading. This choice can only affect a
        // program if some token that may FOLLOW `stdin` is also a format_spec
        // token (json/csv/text/binary). The complete follow set, over every
        // context reaching streaming_source_expr:
        //   simple_pipeline      -> arrow, or end
        //   fan_in_expr          -> ',' or ')'
        //   assertion_subject    -> arrow, or end
        //   reactive_source_expr -> '=>'          (does NOT go via data_source)
        // None is a format_spec token, so preferring the shift can never steal a
        // token belonging to a following construct. No valid program reparses.
        prec.right(seq("stdin", optional($.format_spec))),
        seq("subscribe", "(", $.string_literal, ",", $.string_literal, ")"),
        seq("cdc", "(", $.string_literal, ",", $.string_literal, ")"),
        seq("grpc", "(", $.string_literal, ",", $.string_literal, ")"),
      ),

    provider: ($) =>
      choice("github", "discord", "gitlab", "generic"),

    format_spec: ($) => choice("json", "csv", "text", "binary"),

    // =========================================================
    // Section 3: Preprocessing
    // =========================================================

    preprocessing_stage: ($) =>
      choice(
        $.cleaning_expr,
        $.transformation_expr,
        $.feature_engineering_expr,
        $.splitting_expr,
        seq(
          $.cleaning_expr,
          $.arrow,
          $.feature_engineering_expr,
          $.arrow,
          $.splitting_expr,
        ),
      ),

    cleaning_expr: ($) =>
      seq(
        choice(
          "drop",
          "mean_impute",
          "median_impute",
          "knn_impute",
          "model_impute",
          "zscore",
          "iqr",
          "isolation_forest",
          "dbscan",
          "deduplication",
        ),
        optional($.call_args),
      ),

    model_stage: ($) =>
      seq(
        choice(
          // Supervised classification
          "logistic_regression",
          "decision_tree",
          "random_forest",
          "gradient_boosting",
          "svm",
          "knn",
          "naive_bayes",
          "neural_classifier",
          // Supervised regression
          "linear_regression",
          "ridge",
          "lasso",
          "elastic_net",
          "decision_tree_regressor",
          "random_forest_regressor",
          "gradient_boosting_regressor",
          "neural_regressor",
          // Unsupervised clustering
          "kmeans",
          "dbscan_cluster",
          "hierarchical",
          "gaussian_mixture",
          "spectral",
          // Dimensionality
          "pca",
          "tsne",
          "umap",
          "autoencoder",
          // Anomaly
          "isolation_forest_detector",
          "one_class_svm",
          "autoencoder_detector",
          // Probabilistic
          "bayesian_linear",
          "gaussian_process",
          "hidden_markov",
          "variational_inference",
          "mcmc_sampler",
          // Neural
          "mlp",
          "cnn",
          "rnn",
          "lstm",
          "transformer",
          "graph_neural_network",
          "diffusion_model",
          "variational_autoencoder",
          // Reinforcement
          "q_learning",
          "policy_gradient",
          "actor_critic",
          "mcts_agent",
          // ix-specific patterns
          "karnaugh_optimization",
          "memristive_markov",
          "grammar_weight_learning",
          "governance_health_scorer",
          "citation_power_law",
          "compounding_dimension",
        ),
        optional($.call_args),
      ),

    // =========================================================
    // Section 5: Evaluation
    // =========================================================

    evaluation_stage: ($) =>
      seq(
        choice(
          "accuracy",
          "precision",
          "recall",
          "f1_score",
          "auc_roc",
          "confusion_matrix",
          "log_loss",
          "mse",
          "rmse",
          "mae",
          "r_squared",
          "mape",
          "explained_variance",
          "silhouette_score",
          "calinski_harabasz",
          "davies_bouldin",
          "adjusted_rand_index",
          "normalized_mutual_info",
          "feature_importance",
          "shap_values",
          "partial_dependence",
          "lime_explanation",
          "attention_weights",
          "residual_analysis",
          "holdout",
          "cross_validation",
          "bootstrap",
          "time_series_validation",
          "nested_cv",
          "custom_metric",
          "evaluation",
        ),
        optional($.call_args),
      ),

    // =========================================================
    // Section 6: Deployment
    // =========================================================

    reactive_pipeline_statement: ($) =>
      seq(
        optional(seq($.identifier, "<-")),
        $.reactive_source_expr,
        "=>",
        choice($.pipeline_expr, $.flow_control_expr),
        optional(seq("=>", $.output_sink_expr)),
      ),

    reactive_source_expr: ($) => $.streaming_source_expr,

    output_sink_expr: ($) =>
      choice(
        seq("push", "(", $.string_literal, optional(seq(",", $.string_literal)), ")"),
        seq("write", "(", $.string_literal, ",", $.format_spec, ")"),
        seq("stdout", optional($.format_spec)),
        seq("post", "(", $.string_literal, ",", $.string_literal, ")"),
        seq("mcp_tool", "(", $.string_literal, ",", $.string_literal, ")"),
        seq("alert", "(", "discord", ",", $.string_literal, ")"),
        seq("github", "(", $.string_literal, ",", $.string_literal, ")"),
        seq("notify", "(", $.string_literal, ",", $.string_literal, ")"),
      ),

    mcp_pipeline_statement: ($) =>
      seq(
        $.mcp_step_expr,
        repeat(seq($.mcp_arrow, $.mcp_step_expr)),
        optional($.compound_phase),
      ),

    mcp_step_expr: ($) =>
      choice(
        $.tool_invocation,
        $.parallel_tools_expr,
        $.gated_tool_expr,
        $.binding_statement,
        $.conditional_step_expr,
      ),

    tool_invocation: ($) =>
      seq(
        $.namespace_path,
        ".",
        $.identifier,
        "(",
        optional($.arg_list),
        ")",
      ),

    namespace_path: ($) =>
      seq($.identifier, repeat(seq(".", $.identifier))),

    parallel_tools_expr: ($) =>
      seq(
        "parallel",
        "(",
        $.tool_invocation,
        repeat1(seq(",", $.tool_invocation)),
        ")",
      ),

    binding_statement: ($) =>
      seq($.identifier, "<-", choice($.mcp_step_expr, $.pipeline_expr)),

    assertion_statement: ($) =>
      seq(
        "assert",
        $.identifier,
        ":",
        $.assertion_pipeline,
      ),

    assertion_pipeline: ($) =>
      seq(
        $.assertion_subject,
        repeat(seq($.arrow, $.assertion_check)),
      ),

    assertion_subject: ($) =>
      choice($.data_source, $.identifier, $.pipeline_expr),

    assertion_check: ($) =>
      seq(
        "assert_check",
        "(",
        $.assertion_condition,
        optional(seq(",", "message", ":", $.string_literal)),
        ")",
      ),

    assertion_condition: ($) =>
      choice(
        seq("not_null"),
        seq("type", ":", $.string_literal),
        seq("range", ":", $.number_literal, "..", $.number_literal),
        seq("metric", $.identifier, $.comparison_op, $.float_literal),
        seq("truth", $.comparison_op, $.float_literal),
        seq("schema", ":", $.string_literal),
        $.mog_guard,
        $.identifier, // named predicate
      ),

    // =========================================================
    // Primitives & Shared Rules
    // =========================================================

    arg_list: ($) =>
      seq($.expression, repeat(seq(",", $.expression))),

    expression: ($) =>
      choice(
        $.number_literal,
        $.float_literal,
        $.string_literal,
        $.boolean_literal,
        $.truth_value,
        $.tool_invocation,
        $.identifier,
      ),

    arrow: ($) => choice("→", "->"),
    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    string_literal: ($) =>
      seq('"', /[^"]*/, '"'),
